--- a/style.css
+++ b/style.css
@@ -4,22 +4,67 @@
     box-sizing: border-box;
 }
 
-#container{
+body{
+    font-family: "Raleway", sans-serif;
+    font-weight: normal;
+    font-style: normal;
+    color: white;
+
     background-image: url("img/home-bg.png");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    width: 100%;    
     height: 100vh;
-
-    color: white;
+    position: relative;
 }
+
 
 a{
     text-decoration: none;
     color: white;
 }
 
+ul{
+    list-style: none;
+}
+
 i{
     font-size: 25px;
     color: white;
+}
+
+#header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+#home-title{
+    cursor:default;
+}
+
+.header-items{
+    margin: 20px 10px;
+}
+
+#navbar li{
+    display: inline-block;
+    margin: 0 10px;
+}
+
+#navbar a{
+    transition: color 0.3s ease 0s;
+}
+
+#navbar a:hover{
+    color: darkcyan;
+}
+
+.social-icons i{
+    margin: 0 5px;
+}
+
+@media screen and (max-width: 800px){
+    
 }
