--- a/style.css
+++ b/style.css
@@ -120,10 +120,6 @@ i{
     text-align:center;
 }
 
-h2{
-    margin-bottom: 10px;
-}
-
 #email-info{
     margin: 25px 0 0;
 }
@@ -132,15 +128,28 @@ h2{
     margin: 100px 0 0px;
 }
 
-.contacts p{
-    margin-bottom: 10px;
-    font-size: 20px;
-}
-
 .cell-container, .email-container{
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.contacts h2{
+    margin-bottom: 10px;
+    font-size: 35px;
+    font-weight: 500;
+}
+
+.contacts h3{
+    margin-bottom: 20px;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.contacts p{
+    font-size: 12px;
+    margin-top: 30px;
+    font-weight: 100;
 }
 
 .email, .cell{
