--- a/style.css
+++ b/style.css
@@ -24,10 +24,6 @@ a{
     color: white;
 }
 
-ul{
-    list-style: none;
-}
-
 i{
     font-size: 25px;
     color: white;
@@ -39,78 +35,94 @@ i{
     align-items: center;
 }
 
-#home-title{
+#title{
     cursor:default;
 }
 
 .header-items{
-    margin: 20px 10px;
+    margin: 20px 30px;
 }
 
 #aside, #menubars{
     display: none;
 }
 
-#navbar li{
-    display: inline-block;
-    margin: 0 10px;
+#header ul{
+    list-style: none;
 }
 
-#navbar a{
+#topbar li{
+    display: inline-block;
+    padding: 10px 10px;
+}
+
+#topbar a{
     transition: color 0.3s ease 0s;
 }
 
-#navbar a:hover{
+#topbar a:hover{
     color: darkcyan;
 }
 
+/* HIDDEN STAFF */
 .social-icons i{
-    margin: 0 5px;
+    padding: 10px 10px;
 }
 
-@media screen and (max-width: 800px){
+.hidden{
+    display: none;
+}
+
+
+/* MOBILE */
+
+@media screen and (max-width: 882px){
     
-    #header{
-        display: block;
-        margin: 0 auto;
-    }
-
-    #home-title{
-        cursor:default;
-        display: inline-block;
-        margin: 20px 0;
-        width: 70%;
-    }
-
-    #menubars{
-        display: inline-block;
-        margin: 0 20px;
-    }
-
-    #aside{
-        display: contents;
-    }
-
-    #navbar{
-        display: none;
-    }
-
-    .header-items{
-        margin: 10px;
-        text-align: center;
-    }
-
-    #navbar li{
-        display: inline-block;
+    /* TOOGLE BAR MENU */
+    .bars-container{
+        padding: 20px 15px;
+        position: relative;
         margin: 0 10px;
     }
+    .toogle-bars{
+        width: 25px;
+        height: 2px;
+        background-color: white;
+        display: block;
+        position: relative;
+    }
+    .toogle-bars::before{
+        width: 25px;
+        height: 2px;
+        background-color: white;
+        display: block;
+        position: absolute;
+        bottom: 10px;
+        content: "";
+    }
+    .toogle-bars::after{
+        width: 25px;
+        height: 2px;
+        background-color: white;
+        display: block;
+        position: absolute;
+        top: 10px;
+        content: "";
+    }
+
+    .social-icons, #topbar{
+        display: none;
+    }
+  
 }
+
+
 
 
 /* CONTATTI */
 
 .contacts{
-    width: 60%;
+    width: 80%;
     max-width: 500px;
     margin: 50px auto;
     padding: 20px;
