--- a/style.css
+++ b/style.css
@@ -9,7 +9,8 @@ body{
     font-weight: normal;
     font-style: normal;
     color: white;
-    background-image: url("img/home-bg.png");
+    background-color: rgb(221, 218, 208);
+    /* background-image: url("img/home-bg.png"); */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -31,7 +32,7 @@ i{
 
 #header{
     z-index: 100;
-    width: 100vw;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -45,12 +46,13 @@ i{
 }
 
 #header img{
-    width: 40%;
+    width: 30%;
     max-width: 180px;
+    margin: 10px 0 10px 10px;
 }
 
 .header-items{
-    margin: 20px 30px;
+    margin: 10px 30px;
 }
 
 #aside, #menubars{
@@ -64,6 +66,7 @@ i{
 #topbar li{
     display: inline-block;
     padding: 10px 10px;
+    font-size: 20px;
 }
 
 #topbar a{
@@ -88,6 +91,13 @@ i{
     display: none;
 }
 
+/* Clearfix*/
+.clearfix::after{
+    content: "";
+    display: table;
+    clear: both;
+}
+
 
 /* MOBILE */
 
@@ -106,7 +116,7 @@ i{
         top: 100px;
         width: 200px;
         height: auto;
-        background-color: rgba(45, 61, 75, 0.87);
+        background-color: rgba(45, 61, 75, 0.95);
         transition: all 0.8s ease;
     }
     #topbar ul{
@@ -207,7 +217,7 @@ i{
 /* CHI SONO */
 
 .chisono{
-    background-color: rgb(221, 218, 208);
+    /* background-color: rgb(221, 218, 208); */
 }
 
 .chisono h2{
@@ -234,13 +244,7 @@ i{
     max-width: 400px;
     margin: 0px 50px 10px 0px;
     float: left;
-    display: block;
-}
-
-.chisono::after{
-    content: "";
-    display: table;
-    clear: both;
+    display:block;
 }
 
 
