--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ i{
     align-items: center;
     position: fixed;
     top: 0;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.437);
 }
 
 #title{
@@ -48,11 +48,10 @@ i{
 #header img{
     width: 30%;
     max-width: 180px;
-    margin: 10px 0 10px 10px;
 }
 
 .header-items{
-    margin: 10px 30px;
+    margin: 20px 30px;
 }
 
 #aside, #menubars{
@@ -66,7 +65,7 @@ i{
 #topbar li{
     display: inline-block;
     padding: 10px 10px;
-    font-size: 20px;
+    font-size: 23px;
 }
 
 #topbar a{
@@ -101,10 +100,10 @@ i{
 
 /* MOBILE */
 
-@media screen and (max-width: 882px){
+@media screen and (max-width: 988px){
     
     #header{
-        background-color: black;
+        background-color: rgba(0, 0, 0, 0.437);
     }
     
     /* Side bar menu */
@@ -215,11 +214,6 @@ i{
 
 
 /* CHI SONO */
-
-.chisono{
-    /* background-color: rgb(221, 218, 208); */
-}
-
 .chisono h2{
     color: rgb(41, 41, 48);
     text-align: center;
