--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 }
 
 html{
+    /* width: 100vw;    
+    height: 100vh; */
+    width: 100%;    
     height: 100%;
 }
 
@@ -19,9 +22,11 @@ body{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
-    width: 100vw;    
-    height: 100vh;
-    position: relative;
+
+    /* width: 100vw;    
+    height: 100vh; */
+    width: 100%;    
+    height: 100%;
 }
 
 a{
@@ -37,12 +42,16 @@ i{
 .header{
     z-index: 100;
     width: 100%;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: static;
-    top: 0;
+
     background-color: rgb(60, 96, 128);
+
+    position: relative;
+    top: 0;
+    left: 0;
 }
 
 .logo-firma{
@@ -89,7 +98,7 @@ i{
     margin: 0px auto;
     color: azure;
     clear: both;
-    position: absolute; 
+    position: relative;
     bottom: 0; 
     left: 0;
 }
@@ -229,13 +238,6 @@ i{
 
 /* HOME */
 
-.section-1{
-    
-}
-
-
-
-
 /* CHI SONO */
 
 .wrapper-chisono{  
@@ -244,7 +246,6 @@ i{
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment:fixed;
-    height: 100%;
 }
 
 .chisono h2{
