--- a/style.css
+++ b/style.css
@@ -405,10 +405,13 @@ i{
     align-items: center;
 }
 
+.gallery-box{
+    margin: 50px;
+}
+
 .gallery-box img{
     display: block;
-    margin: 10px;
-    width: 500px;
+    width: 400px;
 }
 
 
